@startuml
title "**组合模式**"

abstract class Component {
  + {abstract} add(component :Component)
  + {abstract} remove(component :Component)
  + {abstract} display(depth :int)
}
note top: 组合中的对象声明接口，在适当情况下，\n实现所有类共有接口的默认行为。声明一个\n接口用于访问和管理 Component 的子部件。

class Leaf {
  + display(depth :int)
}
note bottom: 在组合中表示叶子节点对象，\n页节点没有子节点。

class Composite {
  + add(component :Component)
  + remove(component :Component)
  + display(depth :int)
}
note bottom: 定义有枝节点行为，用来存储子部件，\n在 Component 接口中实现与子部件有关\n的操作，比如增加 add 和删除 remove。

class Client

Client -right-> Component
Composite o--> Component

Component <|-- Leaf
Component <|-- Composite

footer D瓜哥 · https://www.diguage.com · 出品
@enduml
